samples/_failures_safe/1761206319_6d4f9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6447e39c.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_6447e39c.c:166:23: error: ‘TO’ undeclared (first use in this function)
  166 |         token->type = TO
      |                       ^~
./samples/SAFE/__tmp_6447e39c.c:166:23: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6447e39c.c:166:25: error: expected ‘;’ at end of input
  166 |         token->type = TO
      |                         ^
      |                         ;
./samples/SAFE/__tmp_6447e39c.c:166:9: error: expected declaration or statement at end of input
  166 |         token->type = TO
      |         ^~~~~
./samples/SAFE/__tmp_6447e39c.c:166:9: error: expected declaration or statement at end of input
